--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
               <h3 class="h4 mb-2">Premium Quality</h3>
               <p class="text-muted mb-0">
-                Our themes are updated regularly to keep them bug free!
+                Unparalleled quality, unmatched service
               </p>
             </div>
           </div>
@@ -149,18 +149,18 @@
               </div>
               <h3 class="h4 mb-2">Modern Standards</h3>
               <p class="text-muted mb-0">
-                All dependencies are kept current to keep things fresh.
+                Elevating Craft to Current Standards
               </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
-              <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+              <!--<div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>-->
               <div class="mb-2"><i class="bi bi-flag fs-1 text-primary"></i></div>
               
               <h3 class="h4 mb-2">Made in BiH</h3>
               <p class="text-muted mb-0">
-                You can use this design as is, or you can make changes!
+                Homegrown Craftsmanship at Its Finest
               </p>
             </div>
           </div>
@@ -169,7 +169,7 @@
               <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
               <h3 class="h4 mb-2">Made with Care</h3>
               <p class="text-muted mb-0">
-                Is it really open source if it's not made with love?
+                Infused with Dedication and Precision
               </p>
             </div>
           </div>
@@ -183,12 +183,12 @@
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
-              href="assets/img/portfolio/fullsize/1.jpg"
+              href="assets/img/portfolio/fullsize/11.jpg"
               title="Project Name"
             >
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/thumbnails/1.jpg"
+                src="assets/img/portfolio/thumbnails/11.jpg"
                 alt="..."
               />
               <div class="portfolio-box-caption">
@@ -200,12 +200,12 @@
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
-              href="assets/img/portfolio/fullsize/2.jpg"
+              href="assets/img/portfolio/fullsize/22.jpg"
               title="Project Name"
             >
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/thumbnails/2.jpg"
+                src="assets/img/portfolio/thumbnails/22.jpg"
                 alt="..."
               />
               <div class="portfolio-box-caption">
@@ -217,12 +217,12 @@
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
-              href="assets/img/portfolio/fullsize/3.jpg"
+              href="assets/img/portfolio/fullsize/33.jpg"
               title="Project Name"
             >
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/thumbnails/3.jpg"
+                src="assets/img/portfolio/thumbnails/33.jpg"
                 alt="..."
               />
               <div class="portfolio-box-caption">
@@ -234,12 +234,12 @@
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
-              href="assets/img/portfolio/fullsize/4.jpg"
+              href="assets/img/portfolio/fullsize/44.jpg"
               title="Project Name"
             >
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/thumbnails/4.jpg"
+                src="assets/img/portfolio/thumbnails/44.jpg"
                 alt="..."
               />
               <div class="portfolio-box-caption">
@@ -251,12 +251,12 @@
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
-              href="assets/img/portfolio/fullsize/5.jpg"
+              href="assets/img/portfolio/fullsize/55.jpg"
               title="Project Name"
             >
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/thumbnails/5.jpg"
+                src="assets/img/portfolio/thumbnails/55.jpg"
                 alt="..."
               />
               <div class="portfolio-box-caption">
@@ -268,12 +268,12 @@
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
-              href="assets/img/portfolio/fullsize/6.jpg"
+              href="assets/img/portfolio/fullsize/66.jpg"
               title="Project Name"
             >
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/thumbnails/6.jpg"
+                src="assets/img/portfolio/thumbnails/66.jpg"
                 alt="..."
               />
               <div class="portfolio-box-caption p-3">
