about section done

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8 text-center">
-            <h2 class="text-white mt-0">Transforming wood into wonders</h2>
+            <h2 class="mt-0 h2-primary">Transforming wood into wonders</h2>
             <hr class="divider divider-light" />
-            <p class="text-white-75 mb-4">
+            <p class="text-white-bg-primary-new mb-4">
               In the heart of every creation lies the soul of wood, patiently
               carved and meticulously shaped by skilled hands. Our carpentry is
               more than just a craft; it's a timeless dedication to transforming
@@ -120,7 +120,7 @@
               dedication to excellence — a commitment that extends beyond the
               workshop and into the heart of your home.
             </p>
-            <a class="btn btn-light btn-xl" href="#portfolio"
+            <a class="btn btn-primary btn-xl" href="#portfolio"
               >Discover Our Work</a
             >
           </div>
@@ -156,8 +156,10 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
               <!--<div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>-->
-              <div class="mb-2"><i class="bi bi-flag fs-1 text-primary"></i></div>
-              
+              <div class="mb-2">
+                <i class="bi bi-flag fs-1 text-primary"></i>
+              </div>
+
               <h3 class="h4 mb-2">Made in BiH</h3>
               <p class="text-muted mb-0">
                 Homegrown Craftsmanship at Its Finest
