gallery section done

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <a
               class="portfolio-box"
               href="assets/img/portfolio/fullsize/11.jpg"
-              title="Project Name"
+              title="High Gloss White Kitchen"
             >
               <img
                 class="img-fluid"
@@ -194,8 +194,8 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-category text-white-50">Kitchen</div>
+                <div class="project-name">Mediapan Kitchen</div>
               </div>
             </a>
           </div>
@@ -203,7 +203,7 @@
             <a
               class="portfolio-box"
               href="assets/img/portfolio/fullsize/22.jpg"
-              title="Project Name"
+              title="Wooden Doors with Glass"
             >
               <img
                 class="img-fluid"
@@ -211,8 +211,10 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-category text-white-50">
+                  Windows and Doors
+                </div>
+                <div class="project-name">Glass Windows and Glass Doors</div>
               </div>
             </a>
           </div>
@@ -220,7 +222,7 @@
             <a
               class="portfolio-box"
               href="assets/img/portfolio/fullsize/33.jpg"
-              title="Project Name"
+              title="Matte Mediapan Wardrobe"
             >
               <img
                 class="img-fluid"
@@ -228,8 +230,8 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-category text-white-50">Wardrobe</div>
+                <div class="project-name">Mediapan Wardrobe</div>
               </div>
             </a>
           </div>
@@ -237,7 +239,7 @@
             <a
               class="portfolio-box"
               href="assets/img/portfolio/fullsize/44.jpg"
-              title="Project Name"
+              title="Wooden Indoor Doors"
             >
               <img
                 class="img-fluid"
@@ -245,8 +247,8 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-category text-white-50">Doors</div>
+                <div class="project-name">Indoor Doors</div>
               </div>
             </a>
           </div>
@@ -254,7 +256,7 @@
             <a
               class="portfolio-box"
               href="assets/img/portfolio/fullsize/55.jpg"
-              title="Project Name"
+              title="Light Oak Wardrobe"
             >
               <img
                 class="img-fluid"
@@ -262,8 +264,8 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-category text-white-50">Wardrobe</div>
+                <div class="project-name">Wooden Wardrobe</div>
               </div>
             </a>
           </div>
@@ -271,7 +273,7 @@
             <a
               class="portfolio-box"
               href="assets/img/portfolio/fullsize/66.jpg"
-              title="Project Name"
+              title="Solid Wood Dining Table"
             >
               <img
                 class="img-fluid"
@@ -279,8 +281,8 @@
                 alt="..."
               />
               <div class="portfolio-box-caption p-3">
-                <div class="project-category text-white-50">Category</div>
-                <div class="project-name">Project Name</div>
+                <div class="project-category text-white-50">Table</div>
+                <div class="project-name">Dining Table</div>
               </div>
             </a>
           </div>
