"inquiry" section done

--- a/index.html
+++ b/index.html
@@ -289,15 +289,14 @@
         </div>
       </div>
     </div>
+
     <!-- Call to action-->
-    <section class="page-section bg-dark text-white">
+    <section class="page-section bg-dark text-white bg-section-new">
       <div class="container px-4 px-lg-5 text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a
-          class="btn btn-light btn-xl"
-          href="https://startbootstrap.com/theme/creative/"
-          >Download Now!</a
-        >
+        <h2 class="mb-4">
+          Contact Jasen Carpentry today and elevate your living space
+        </h2>
+        <a class="btn btn-light btn-xl" href="#contact">Send Inquiry</a>
       </div>
     </section>
     <!-- Contact-->
@@ -305,7 +304,7 @@
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-8 col-xl-6 text-center">
-            <h2 class="mt-0">Let's Get In Touch!</h2>
+            <h2 class="mt-0">Send us an Inquiry!</h2>
             <hr class="divider" />
             <p class="text-muted mb-5">
               Ready to start your next project with us? Send us a messages and
@@ -332,27 +331,30 @@
                   placeholder="Enter your name..."
                   data-sb-validations="required"
                 />
-                <label for="name">Full name</label>
+                <label for="name">Full name *</label>
                 <div class="invalid-feedback" data-sb-feedback="name:required">
                   A name is required.
                 </div>
               </div>
-              <!-- Email address input-->
+              <!-- Address input-->
               <div class="form-floating mb-3">
                 <input
                   class="form-control"
-                  id="email"
-                  type="email"
-                  placeholder="name@example.com"
-                  data-sb-validations="required,email"
+                  id="address"
+                  type="text"
+                  placeholder="Enter your address"
+                  data-sb-validations="required"
                 />
-                <label for="email">Email address</label>
-                <div class="invalid-feedback" data-sb-feedback="email:required">
-                  An email is required.
+                <label for="address">Your Address *</label>
+                <div
+                  class="invalid-feedback"
+                  data-sb-feedback="address:required"
+                >
+                  An address is required.
                 </div>
-                <div class="invalid-feedback" data-sb-feedback="email:email">
+                <!--<div class="invalid-feedback" data-sb-feedback="email:email">
                   Email is not valid.
-                </div>
+                </div> -->
               </div>
               <!-- Phone number input-->
               <div class="form-floating mb-3">
@@ -360,10 +362,10 @@
                   class="form-control"
                   id="phone"
                   type="tel"
-                  placeholder="(123) 456-7890"
+                  placeholder="Enter your phone number"
                   data-sb-validations="required"
                 />
-                <label for="phone">Phone number</label>
+                <label for="phone">Phone number *</label>
                 <div class="invalid-feedback" data-sb-feedback="phone:required">
                   A phone number is required.
                 </div>
@@ -378,12 +380,13 @@
                   style="height: 10rem;"
                   data-sb-validations="required"
                 ></textarea>
-                <label for="message">Message</label>
+                <label for="message">Describe Desired Services *</label>
+
                 <div
                   class="invalid-feedback"
                   data-sb-feedback="message:required"
                 >
-                  A message is required.
+                  Services field is required
                 </div>
               </div>
               <!-- Submit success message-->
@@ -416,25 +419,27 @@
                   id="submitButton"
                   type="submit"
                 >
-                  Submit
+                  Send an Inquiry
                 </button>
               </div>
             </form>
           </div>
         </div>
-        <div class="row gx-4 gx-lg-5 justify-content-center">
+        <!--
+         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-lg-4 text-center mb-5 mb-lg-0">
             <i class="bi-phone fs-2 mb-3 text-muted"></i>
             <div>+1 (555) 123-4567</div>
           </div>
         </div>
+        -->
       </div>
     </section>
     <!-- Footer-->
     <footer class="bg-light py-5">
       <div class="container px-4 px-lg-5">
         <div class="small text-center text-muted">
-          Copyright &copy; 2023 - Company Name
+          Copyright &copy; 2024 - Jasen Carpentry
         </div>
       </div>
     </footer>
