--- a/index.html
+++ b/index.html
@@ -129,27 +129,36 @@
     </section>
     <!-- Services-->
     <section class="page-section" id="services">
+      <!--First row of Services-->
       <div class="container px-4 px-lg-5">
         <h2 class="text-center mt-0">At Your Service</h2>
         <hr class="divider" />
         <div class="row gx-4 gx-lg-5">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
-              <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-              <h3 class="h4 mb-2">Premium Quality</h3>
+              <div class="mb-2">
+                <i class="bi-rulers fs-1 text-primary"></i>
+              </div>
+              <h3 class="h4 mb-2-1">MEASUREMENT</h3>
+              <br />
               <p class="text-muted mb-0">
-                Unparalleled quality, unmatched service
+                Our expert team visits your home to precisely measure and assess
+                the specifications for your custom-made products, be it doors,
+                kitchens, tables or wardrobes
               </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
               <div class="mb-2">
-                <i class="bi bi-shield-check fs-1 text-primary"></i>
+                <i class="bi bi-tools fs-1 text-primary"></i>
               </div>
-              <h3 class="h4 mb-2">Modern Standards</h3>
+              <h3 class="h4 mb-2-1">PRODUCTION</h3>
+              <br />
               <p class="text-muted mb-0">
-                Elevating Craft to Current Standards
+                With meticulous craftsmanship, we skillfully produce each
+                product, ensuring attention to detail and quality in every stage
+                of the manufacturing process
               </p>
             </div>
           </div>
@@ -157,26 +166,35 @@
             <div class="mt-5">
               <!--<div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>-->
               <div class="mb-2">
-                <i class="bi bi-flag fs-1 text-primary"></i>
+                <i class="bi bi-house-door-fill fs-1 text-primary"></i>
               </div>
-
-              <h3 class="h4 mb-2">Made in BiH</h3>
+              <h3 class="h4 mb-2-1">INSTALLATION</h3>
+              <br />
               <p class="text-muted mb-0">
-                Homegrown Craftsmanship at Its Finest
+                Once your custom piece is crafted to perfection, our dedicated
+                professionals bring the craftsmanship to your doorstep,
+                providing seamless installation for your desired products
               </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
-              <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-              <h3 class="h4 mb-2">Made with Care</h3>
+              <div class="mb-2">
+                <i class="bi bi-wrench fs-1 text-primary"></i>
+              </div>
+              <h3 class="h4 mb-2-1">REPAIR</h3>
+              <br />
               <p class="text-muted mb-0">
-                Infused with Dedication and Precision
+                For any occasional touch-ups or repairs, rest easy knowing we
+                offer one-time service exclusively for our previous works,
+                ensuring the longevity and satisfaction of your purchased
+                products
               </p>
             </div>
           </div>
         </div>
       </div>
+      <!--Second row of Services-->
     </section>
     <!-- Portfolio-->
     <div id="portfolio">
@@ -297,6 +315,55 @@
           Contact Jasen Carpentry today and elevate your living space
         </h2>
         <a class="btn btn-light btn-xl" href="#contact">Send Inquiry</a>
+      </div>
+    </section>
+    <section>
+      <!--Second row of Services-->
+      <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5">
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+              <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+              <h3 class="h4 mb-2">Premium Quality</h3>
+              <p class="text-muted mb-0">
+                Unparalleled quality, unmatched service
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+              <div class="mb-2">
+                <i class="bi bi-shield-check fs-1 text-primary"></i>
+              </div>
+              <h3 class="h4 mb-2">Modern Standards</h3>
+              <p class="text-muted mb-0">
+                Elevating Craft to Current Standards
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+              <!--<div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>-->
+              <div class="mb-2">
+                <i class="bi bi-flag fs-1 text-primary"></i>
+              </div>
+
+              <h3 class="h4 mb-2">Made in BiH</h3>
+              <p class="text-muted mb-0">
+                Homegrown Craftsmanship at Its Finest
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="mt-5">
+              <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+              <h3 class="h4 mb-2">Made with Care</h3>
+              <p class="text-muted mb-0">
+                Infused with Dedication and Precision
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Contact-->
