"gallery" section updated

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <div id="portfolio">
       <div class="container-fluid p-0">
         <div class="row g-0">
+          <!--First Row-->
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
@@ -212,7 +213,7 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Kitchen</div>
+                <!-- <div class="project-category text-white-50">Kitchen</div> -->
                 <div class="project-name">Mediapan Kitchen</div>
               </div>
             </a>
@@ -229,9 +230,9 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
+                <!-- <div class="project-category text-white-50">
                   Windows and Doors
-                </div>
+                </div> -->
                 <div class="project-name">Glass Windows and Glass Doors</div>
               </div>
             </a>
@@ -248,11 +249,12 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Wardrobe</div>
+                <!-- <div class="project-category text-white-50">Wardrobe</div> -->
                 <div class="project-name">Mediapan Wardrobe</div>
               </div>
             </a>
           </div>
+          <!--Second Row-->
           <div class="col-lg-4 col-sm-6">
             <a
               class="portfolio-box"
@@ -265,7 +267,7 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Doors</div>
+                <!-- <div class="project-category text-white-50">Doors</div> -->
                 <div class="project-name">Indoor Doors</div>
               </div>
             </a>
@@ -282,7 +284,7 @@
                 alt="..."
               />
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Wardrobe</div>
+                <!-- <div class="project-category text-white-50">Wardrobe</div> -->
                 <div class="project-name">Wooden Wardrobe</div>
               </div>
             </a>
@@ -299,8 +301,118 @@
                 alt="..."
               />
               <div class="portfolio-box-caption p-3">
-                <div class="project-category text-white-50">Table</div>
+                <!-- <div class="project-category text-white-50">Table</div> -->
                 <div class="project-name">Dining Table</div>
+              </div>
+            </a>
+          </div>
+          <!--Third Row-->
+          <div class="col-lg-4 col-sm-6">
+            <a
+              class="portfolio-box"
+              href="assets/img/portfolio/fullsize/77.jpg"
+              title="Wooden Table and Wooden Chairs"
+            >
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio/thumbnails/77.jpg"
+                alt="..."
+              />
+              <div class="portfolio-box-caption">
+                <!-- <div class="project-category text-white-50">Kitchen</div> -->
+                <div class="project-name">Table and Chairs</div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a
+              class="portfolio-box"
+              href="assets/img/portfolio/fullsize/88.jpg"
+              title="Wooden Entry Door"
+            >
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio/thumbnails/88.jpg"
+                alt="..."
+              />
+              <div class="portfolio-box-caption">
+                <!-- <div class="project-category text-white-50">
+                  Windows and Doors
+                </div> -->
+                <div class="project-name">
+                  Wooden Entry Door and Wooden Glass Window
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a
+              class="portfolio-box"
+              href="assets/img/portfolio/fullsize/99.jpg"
+              title="Solid Mahogody Assembly"
+            >
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio/thumbnails/99.jpg"
+                alt="..."
+              />
+              <div class="portfolio-box-caption">
+                <!-- <div class="project-category text-white-50">Wardrobe</div> -->
+                <div class="project-name">Mahogany Wood</div>
+              </div>
+            </a>
+          </div>
+          <!--Fourth Row-->
+          <div class="col-lg-4 col-sm-6">
+            <a
+              class="portfolio-box"
+              href="assets/img/portfolio/fullsize/111.jpg"
+              title="Matte White Kitchen"
+            >
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio/thumbnails/111.jpg"
+                alt="..."
+              />
+              <div class="portfolio-box-caption">
+                <!-- <div class="project-category text-white-50">Kitchen</div> -->
+                <div class="project-name">Mediapan Matte Kitchen</div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a
+              class="portfolio-box"
+              href="assets/img/portfolio/fullsize/222.jpg"
+              title="Light Oak Kitchen"
+            >
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio/thumbnails/222.jpg"
+                alt="..."
+              />
+              <div class="portfolio-box-caption">
+                <!-- <div class="project-category text-white-50">
+                  Windows and Doors
+                </div> -->
+                <div class="project-name">Matte Wooden Kitchen</div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a
+              class="portfolio-box"
+              href="assets/img/portfolio/fullsize/333.jpg"
+              title="Matte Wooden Cabinet"
+            >
+              <img
+                class="img-fluid"
+                src="assets/img/portfolio/thumbnails/333.jpg"
+                alt="..."
+              />
+              <div class="portfolio-box-caption">
+                <!-- <div class="project-category text-white-50">Wardrobe</div> -->
+                <div class="project-name">Light Oak Cabinet</div>
               </div>
             </a>
           </div>
